# Dit638

./: .gitignore  CMakeLists.txt  DockerFilip.armhf  Dockerfile  README.md  code-of-conduct.md  daviddocker
src/: braking_test.cpp  main.cpp  main.h
src/Interfaces/: cvdefs.cpp  cvdefs.h  trackinface.h
src/TestProjects/: memoryCheck.cpp  memoryCheck.h  test.cpp  test.h
src/TestProjects/GmockExample/: carHandler.cpp  carHandler.h  mainCopy.cpp  mainCopy.h  mainFake.h
src/TestProjects/Testing/: test.cpp
src/control/: msc_test.cpp  mservice_controller.cpp  mservice_controller.h
src/control/Filiptests/: follow_test.cpp
src/cv/: CMakeLists.txt  calibration.cpp  calibration.h  color_calibration.cpp  color_calibration.h  main.cpp  main.py  tracking.cpp  tracking.h
src/cv/attic/: training_data.py
src/cv/attic/Negative_Pictures/: README.md
src/cv/attic/Positive_Pictures/: README.md
src/cv/classifiers/: car.xml
src/cv/scripts/: recognition.py
